# rkyv

examples/backwards_compat/: Cargo.toml
examples/json/: Cargo.toml
rkyv/: Cargo.toml
rkyv_bench/: Cargo.toml
rkyv_dyn/: Cargo.toml
rkyv_dyn_test/: Cargo.toml
rkyv_test/: Cargo.toml
